--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,9 @@
 {
 	"recommendations": [
-		"ms-vscode.cpptools",
+//		"ms-vscode.cpptools",
 		"entan-gl.cc65-vice",
-		"sharpninja.cc65"
-	]
+//		"sharpninja.cc65",
+		"llvm-vs-code-extensions.vscode-clangd"
+	],
+	"unwantedRecommendations": ["sharpninja.cc65", "tlgkccampbell.code-ca65"]
 }
