--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
 	"recommendations": [
 		"llvm-vs-code-extensions.vscode-clangd",
-		"sharpninja.cc65"
+		"entan-gl.cc65-vice"
 	],
 	"unwantedRecommendations": ["tlgkccampbell.code-ca65"]
 }
